--- a/APIControleCaixa.dproj
+++ b/APIControleCaixa.dproj
@@ -97,7 +97,6 @@
         <DCCReference Include="Models\DAO\DAO.Movimentacoes.pas"/>
         <DCCReference Include="Models\DAO\DAO.Usuarios.pas"/>
         <DCCReference Include="Services\Service.Categorias.pas"/>
-        <DCCReference Include="Util\Util.Funcoes.pas"/>
         <DCCReference Include="Models\Model.Resposta.pas"/>
         <DCCReference Include="Services\Service.Empresas.pas"/>
         <DCCReference Include="Services\Service.Movimentacoes.pas"/>
@@ -108,6 +107,8 @@
         <DCCReference Include="Controllers\Controller.Login.pas"/>
         <DCCReference Include="Models\Model.Login.pas"/>
         <DCCReference Include="Models\Model.ResumoDiario.pas"/>
+        <DCCReference Include="Util\Util.Token.pas"/>
+        <DCCReference Include="Models\Model.Registro.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
